--- a/.gitignore
+++ b/.gitignore
@@ -160,5 +160,16 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+# Node module dependencies
+node_modules/
 
+# VitePress cache and build output directories
+.vitepress/cache/
+.vitepress/dist/
+
+# Logs and other temporary files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
 *.yml
