--- a/.gitignore
+++ b/.gitignore
@@ -160,6 +160,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
 # Node module dependencies
 node_modules/
 
@@ -172,4 +173,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .DS_Store
-*.yml
+# *.yml
